kubernetes/apps/network/k8s-gateway/app/l4route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: coredns-gateway
spec:
  parentRefs:
    - name: tailscale-l4
      namespace: kube-system
      sectionName: dns-tcp
  rules:
    - backendRefs:
        - name: coredns-gateway
          port: 53
